src/test/ui/parser/duplicate-visibility.stderr
error: visibility `pub` is not followed by an item
  --> $DIR/duplicate-visibility.rs:4:5
   |
LL |     pub pub fn foo();
   |     ^^^ the visibility
   |
   = help: you likely meant to define an item, e.g., `pub fn foo() {}`

error: non-item in item list
  --> $DIR/duplicate-visibility.rs:4:9
   |
LL | extern "C" {
   |            - item list starts here
LL |     pub pub fn foo();
   |         ^^^ non-item starts here
...
LL | }
   | - item list ends here

error: aborting due to 2 previous errors

